--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,5 @@ MY TO-DO LIST
 4. Study vmware.
 5. Work on pull ups
 6. Ride peloton
+7. Check on exam voucher - Nutanix
+8. Create study plan for vmware exam
